--- a/src/XslMapper.FunctionApp/XslMapper.FunctionApp.csproj
+++ b/src/XslMapper.FunctionApp/XslMapper.FunctionApp.csproj
@@ -1,20 +1,29 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
-    <AzureFunctionsVersion>v4</AzureFunctionsVersion>
+	  <TargetFramework>net48</TargetFramework>
+	  <AzureFunctionsVersion>v4</AzureFunctionsVersion>
+	  <OutputType>Exe</OutputType>
+	
     <AssemblyName>Aliencube.XslMapper.FunctionApp</AssemblyName>
     <RootNamespace>Aliencube.XslMapper.FunctionApp</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Aliencube.AzureFunctions.Extensions.Configuration.AppSettings" Version="1.2.0" />
     <PackageReference Include="Aliencube.AzureFunctions.Extensions.DependencyInjection" Version="2.2.0.1" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.37" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Http" Version="3.2.0" />
+   
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.3" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+	  <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.8.0" />
+	  <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.7.0" />
+
+	 
+	  <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
+	 
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
